# QtMCU

./: CMakeLists.txt  MCU2Depricated.qml  main.cpp  test1.cpp  test1.h
